--- a/CSS/_partial.scss
+++ b/CSS/_partial.scss
@@ -95,7 +95,7 @@ $logotxt:"Elsie_Swash_Caps";
 @mixin heading ($fontsize:2rem){
     font-family: $heading;
     font-size: $fontsize;
-    padding: 1rem 0.5rem 1rem 0.5rem;
+    padding: 1rem 0.5rem 0 0.5rem;
     color: $white;
 }
 @mixin text ($line-height:2rem, $fontsize:1.2rem, $padding: 1.5rem 0.5rem 0 0.5rem){
