--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -8,6 +8,57 @@
 /*--------------------------Fælles styling af gentagene elementer op tværs af de tre sider--------------------------*/
 body{
     @include partial.body;
+
+    .dropdown{
+        list-style: none;
+        
+        
+            li{
+                display: block;
+                position: relative;
+
+                &:hover ul{
+                    display: block;
+                }
+
+                .b_toggle{                    
+                    img{
+                        width: 2.2rem;
+                        height: 2.5rem;
+                    }
+                }
+
+                    ul{
+                        position: absolute;
+                        z-index: 999;
+                        display: none;
+                        top: 100%;
+                        left: 0;
+                        width: auto;
+                        padding: 1rem 1rem;
+
+                        li{
+                            display: block;
+
+                            
+                            a{
+                                
+                                @include partial.nav_txt;
+                                font-family: partial.$txt;
+                                font-size: 1.2rem;
+                                justify-content: left;
+                                
+                                    &:hover{
+                                        background-color: partial.$bgcolor;
+                                    }
+                                
+                                
+                            }
+                        }
+                    }
+        }
+
+    }
     /*---------------------Header + nav styling------------------*/
         header{
             position: sticky;
