--- a/CSS/_partial.scss
+++ b/CSS/_partial.scss
@@ -78,6 +78,14 @@ $logotxt:"Elsie_Swash_Caps";
     box-shadow: 0px 4px 15px 2px rgba($white, 0.50) inset;
     backdrop-filter: blur(5px);
 }
+@mixin dropdown{
+    width: 50%;
+    padding: 1.5rem 1.5rem;
+    margin: 0.5rem 1rem;
+    background-color: $lgreen;
+    border: 2px solid rgba($white, 0.50);
+    box-shadow: 0px 4px 15px 2px rgba($white, 0.50) inset;
+}
 
 @mixin tip ($width:90%, $height:auto, $margin: 3rem auto, $padding:2rem) {
     height:$height;
