--- a/CSS/style.css
+++ b/CSS/style.css
@@ -31,52 +31,6 @@ body {
   /*---------------------Section + link------------------*/
   /*---------------------Footer------------------*/
 }
-body .dropdown {
-  list-style: none;
-}
-body .dropdown li {
-  display: block;
-  position: relative;
-}
-body .dropdown li:hover ul {
-  display: block;
-}
-body .dropdown li .b_toggle img {
-  width: 2.2rem;
-  height: 2.5rem;
-}
-body .dropdown li ul {
-  position: absolute;
-  z-index: 999;
-  display: none;
-  top: 100%;
-  left: 0;
-  width: auto;
-  padding: 1rem 1rem;
-}
-body .dropdown li ul li {
-  display: block;
-}
-body .dropdown li ul li a {
-  font-size: 2rem;
-  color: #F2F2F2;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-decoration: none;
-  font-family: "Lexend-Regular";
-  font-size: 1.2rem;
-  justify-content: left;
-}
-body .dropdown li ul li a:hover {
-  color: #FFA54B;
-  transition: ease-in-out 0.3s;
-}
-body .dropdown li ul li a:hover {
-  background-color: #1F3939;
-}
 body header {
   position: sticky;
   top: 0;
@@ -96,8 +50,60 @@ body header .mobil {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: relative;
 }
-body header .mobil img {
+body header .mobil .dropdown {
+  list-style: none;
+}
+body header .mobil .dropdown li {
+  display: block;
+}
+body header .mobil .dropdown li:hover ul {
+  display: block;
+  transition: ease-in 0.25s;
+}
+body header .mobil .dropdown li .b_toggle img {
+  width: 2.2rem;
+  height: 2.5rem;
+}
+body header .mobil .dropdown li ul {
+  position: absolute;
+  z-index: 999;
+  display: none;
+  top: 100%;
+  left: 0;
+  width: 50%;
+  padding: 1.5rem 1.5rem;
+  margin: 0.5rem 1rem;
+  background-color: #325858;
+  border: 2px solid rgba(242, 242, 242, 0.5);
+  box-shadow: 0px 4px 15px 2px rgba(242, 242, 242, 0.5) inset;
+}
+body header .mobil .dropdown li ul li {
+  display: block;
+}
+body header .mobil .dropdown li ul li a {
+  font-size: 2rem;
+  color: #F2F2F2;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  font-family: "Lexend-Regular";
+  font-size: 1.2rem;
+  justify-content: left;
+  line-height: 2rem;
+}
+body header .mobil .dropdown li ul li a:hover {
+  color: #FFA54B;
+  transition: ease-in-out 0.3s;
+}
+body header .mobil .dropdown li ul li a:hover {
+  background-color: #1F3939;
+}
+body header .mobil a img {
   width: 2.2rem;
   height: 2.5rem;
 }
